# cheers

./: .clang-format  CMakeLists.txt  README.adoc
cheers-example/: CMakeLists.txt  cheers_example.cpp  demo_layer.cpp  demo_layer.hpp  demo_shader_450.frag  demo_shader_450.vert  interpolator.hpp  task.cpp  task.hpp
cheers-project/: CMakeLists.txt
cheers-project/cheers/: CMakeLists.txt
cheers-project/cheers/layer/: CMakeLists.txt  layer.hpp  layer_manager.cpp  layer_manager.hpp  model_layer.cpp  model_layer.hpp  path_layer.cpp  path_layer.hpp  rgb_image_layer.cpp  rgb_image_layer.hpp  scene_layer.cpp  scene_layer.hpp  utils.hpp  widget.cpp  widget.hpp
cheers-project/cheers/proto/: CMakeLists.txt  image.proto  misc.proto  model.proto  path.proto
cheers-project/cheers/resource/: CMakeLists.txt  font_absolute_path.hpp.in  shader_absolute_path.hpp.in
cheers-project/cheers/resource/shader/: axis_shader_410.frag  axis_shader_450.frag  axis_shader_450.vert  axis_shader_460.frag  axis_shader_460.vert  grid_shader_410.frag  grid_shader_410.vert  grid_shader_450.frag  grid_shader_450.vert  grid_shader_460.frag  grid_shader_460.vert  imgui_shader_410.frag  imgui_shader_410.vert  imgui_shader_450.frag  imgui_shader_450.vert  imgui_shader_460.frag  imgui_shader_460.vert  model_shader_450.vert  model_shader_460.frag  path_shader_410.frag  path_shader_450.frag  path_shader_460.vert
cheers-project/cheers/shader/: CMakeLists.txt  axis_shader_410.vert  path_shader_410.vert  shader_absolute_path.hpp.in
cheers-project/cheers/utils/: CMakeLists.txt  context.cpp  context.hpp  gl_backup_state.cpp  gl_backup_state.hpp  gl_object.cpp  gl_object.hpp  gl_program_wrapper.cpp  gl_program_wrapper.hpp  im_export.hpp  im_renderer.cpp  im_renderer.hpp  throw_and_check.hpp  window_ui_state.hpp
cheers-project/cheers/window/: CMakeLists.txt  arcball_camera.cpp  arcball_camera.hpp  callback.cpp  callback.hpp  window.cpp  window.hpp
cheers-project/cmake/: cheers_target.cmake  cheers_target_helper.cmake  import_bottle.cmake  import_fmt.cmake  import_glm.cmake  import_imgui.cmake  import_opengl.cmake  import_protobuf.cmake
cheers-project/depends/: CMakeLists.txt
